@@ -1,3 +1,12 @@
+2008-01-08  Thomas Mills HInkle  <tmhinkle@gmail.com>
+
+	* gnome-sudoku/src/lib/gnome_sudoku.py Use add_value_to_ui for all
+	callbacks where we restore user values to the grid (whether
+	through loading saved game or undo). (Bug #430893)
+	* gnome-sudoku/src/lib/gsudoku.py Use add_value_to_ui for all
+	callbacks where we restore user values to the grid (whether
+	through loading saved game or undo). (Bug #430893)
+
 2007-12-06  Thomas H.P. Andersen  <phomes@gmail.com>
 
 	* gnome-sudoku/src/lib/gnome_sudoku.py:
